--- a/assets/style.css
+++ b/assets/style.css
@@ -7,13 +7,15 @@ html, body, div {
   flex-wrap: wrap;
   justify-content: center;
   padding: 5px 50px;
+  flex-wrap: wrap;
+  justify-content: space-around !important;
 }
 
 .card-container {
+  max-width: 350px;
   background: #EBEDEE;
   padding: 20px 50px;
-  max-width: 360px;
-  margin: 10px 40px;
+  margin: 0 20px 50px 20px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -319,8 +321,9 @@ table {
 .twitter-card-container{
   border-radius: 5px;
   border: 1px solid #324856;
-  width: 350px;
-  height: 190px;
+  width: 100%;
+  max-width: 300px;
+  margin: 15px;
 }
 
 .twitter-wrapper{
@@ -329,6 +332,7 @@ table {
   flex-wrap: wrap;
   padding: 5px 50px;
   justify-content: space-around;
+  margin-right: inherit;
 }
 
 @media (max-width: 920px) {
@@ -338,15 +342,24 @@ table {
 }
 
 @media (max-width: 480px) {
-  /*.user-card-container {*/
-  /*width: 250px;*/
-  /*}*/
+  .section-header {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+    text-align: left !important;
+  }
+  .twitter-wrapper {
+    padding: 10px;
+  }
 }
 
 @media (max-width: 850px) {
   /*.user-card-container {*/
   /*width: 300px;*/
   /*}*/
+}
+
+.twitter-wrapper {
+  margin-left: 0 !important;
 }
 
 .user-description {
@@ -385,7 +398,8 @@ table {
   }
 
   .section-header {
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .footer-social-links {
@@ -404,6 +418,27 @@ table {
     margin-right: auto;
     display: flex;
   }
+}
+
+@media (max-width: 480px) {
+  .footer-links-wrapper {
+    margin-left: initial !important;
+  }
+  .user-card-container{
+    width: 100%;
+  }
+  .user-card-wrapper {
+    padding: 10px;
+    margin-right: -50px;
+  }
+}
+
+.twitter-wrapper {
+  margin-left: 30px;
+}
+ .values-wrapper {
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .no-text-shadow {
