--- a/assets/style.css
+++ b/assets/style.css
@@ -98,6 +98,12 @@ body a {
   padding-left: 100px;
 }
 
+@media (max-width: 576px) {
+  .carousel-container {
+    padding-left: 20px;
+  }
+}
+
 .carousel-info {
   height: 100%;
   width: 300px;
